Quiroga Juan: me encargo del diseño de la página principal

--- a/MedFiles o AssistMedic/index.html
+++ b/MedFiles o AssistMedic/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <nav class="navbar navbar-expand" style="background-color: rgb(103, 161, 103);" data-bs-theme="dark">
+        <nav class="navbar navbar-expand" style="background-color: rgb(98, 165, 107);" data-bs-theme="dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">MedFiles</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,36 +24,31 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">TURNOS</a>
+                    <a class="nav-link" href="#">OPERACIONES</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="#">+ INFORMACIÓN</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="#">SOBRE NOSOTROS</a>
                   </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                    <div class="dropdown-menu">
-                      <a class="dropdown-item" href="#">Action</a>
-                      <a class="dropdown-item" href="#">Another action</a>
-                      <a class="dropdown-item" href="#">Something else here</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#">Separated link</a>
-                    </div>
+                  <div class="registro_usuario">
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">REGISTRARSE</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">INICIAR SESIÓN</a>
+                  </li>
+                </div>
                 </ul>
-                <form class="d-flex">
-                  <input class="form-control me-sm-2" type="search" placeholder="Search">
-                  <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-                </form>
               </div>
             </div>
           </nav>    
     </nav>
 
     <main>
-
+      <h1>¡Bienvenido a MedFiles!</h1>
+      <p>Te damos la bienvenidada a nuestra página, a través de la cual vas a poder realizar el pedido de turnos, entre otras operaciones</p>
     </main>
 
     <footer>
