--- a/MedFiles o AssistMedic/index.html
+++ b/MedFiles o AssistMedic/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MedFiles</title>
-    <link rel="stylesheet" href="assets/styles/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">  
     <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/styles/style.css">
 </head>
+
 <body>
     <nav>
-        <nav class="navbar navbar-expand" style="background-color: rgb(98, 165, 107);" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-lg" style="background-color: rgb(98, 165, 107);" data-bs-theme="dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">MedFiles</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,26 +33,146 @@
                   <li class="nav-item">
                     <a class="nav-link" href="#">SOBRE NOSOTROS</a>
                   </li>
-                  <div class="registro_usuario">
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">REGISTRARSE</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">INICIAR SESIÓN</a>
-                  </li>
-                </div>
                 </ul>
+                <div class="d-flex registro_usuario">
+                    <a class="nav-link registro" href="#">REGISTRARSE</a>
+                    <a class="nav-link iniciar_sesion" href="#">INICIAR SESIÓN</a>
+                </div>
               </div>
             </div>
           </nav>    
     </nav>
 
     <main>
-      <h1>¡Bienvenido a MedFiles!</h1>
-      <p>Te damos la bienvenidada a nuestra página, a través de la cual vas a poder realizar el pedido de turnos, entre otras operaciones</p>
+      <h1 style="color: white; font-weight: 1000;">¡Bienvenido a MedFiles!</h1>
+      <section>
+      <p style="font-size: 15px;">Te damos la bienvenida a nuestra página, a través de la cual vas a poder realizar el pedido de turnos, entre otras operaciones. <br>
+      Para pedir turnos y demás, puedes dirigirte al apartado "OPERACIONES". <br>
+      Si tienes un par de dudas, dirigete al apartado "+ INFORMACIÓN". <br>
+      Si quieres saber sobre nuestra historia, puedes ir al apartado "SOBRE NOSOTROS".</p>
+
+      <p style="font-size: 20px; font-weight: 1000;">PARA REALIZAR CUALQUIER OPERACION DENTRO DE LA PÁGINA, NECESITAMOS QUE TE REGISTRES O INICIES SESIÓN.</p>
+      </section>
     </main>
 
     <footer>
+      <!-- Footer -->
+<footer class="text-center text-lg-start" style="background-color: rgb(98, 165, 107);">
+  <!-- Section: Social media -->
+  <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+    <!-- Left -->
+    <div class="me-5 d-none d-lg-block" style="color: white; font-weight: 1000;">
+      <span>MEDFILES</span>
+    </div>
+    <!-- Left -->
+    <!-- Left -->
+
+    <!-- Right -->
+    <div>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-google"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-github"></i>
+      </a>
+    </div>
+    <!-- Right -->
+  </section>
+  <!-- Section: Social media -->
+
+  <!-- Section: Links  -->
+  <section class="">
+    <div class="container text-center text-md-start mt-5">
+      <!-- Grid row -->
+      <div class="row mt-3">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+          <!-- Content -->
+          <h6 class="text-uppercase fw-bold mb-4" style="color: white; ">
+            <i class="fas fa-gem me-3" style="font-weight: 1000;">¿Donde estamos?</i>
+          </h6>
+          <p style="color: white">
+            
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4" style="color: white;">
+            CONTACTO
+          </h6>
+          <p>
+            <a href = "" class="text-reset">zenagsuma5@gmail.com</a>
+          </p>
+          <p>
+            <a href="https://a24films.com/films" target="_blank" class="text-reset">ramiroaanchez345@gmail.com</a>
+          </p>
+          <p>
+            <a href="https://a24films.com/television" target="_blank" class="text-reset">juanqi3489@gmail.com</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4" style="color: white;">
+            NO SE QUE PONER
+          </h6>
+          <p>
+            <a href="" target="_blank" class="text-reset"></a>
+          </p>
+          <p>
+            <a href="" target="_blank" class="text-reset"></a>
+          </p>
+          <p>
+            <a href="" target="_blank" class="text-reset"></a>
+          </p>
+          <p>
+            <a href="" target="_blank"  class="text-reset"></a>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+          <!-- Links -->
+          <h6 class="" style="color: white;">NO SE QUE PONER</h6>
+          <p>
+            <a href="" target="_blank" class="text-reset"></a>
+          </p>
+          <p>
+            <a href="" target="_blank" class="text-reset"></a>
+          </p>
+          <p>
+            <a href="" target="_blank" class="text-reset"></a>
+          </p>
+          <p>
+            <a href="" target="_blank"  class="text-reset"></a>
+          </p>
+        </div>
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
+    </div>
+  </section>
+  <!-- Section: Links  -->
+</footer>
+<!-- Footer -->
 
     </footer>
 
