--- a/MedFiles o AssistMedic/registro.html
+++ b/MedFiles o AssistMedic/registro.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MedFiles</title>
-    <link rel="stylesheet" href="assets/styles/reg-style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
@@ -56,28 +55,61 @@
             </div>
         </nav>
     </nav>
-
     <main>
-        <div id="formu">
-            <form id="register">
-                <h2 style="text-align: center;">Registrarse</h2>
-            <input class="botnreg" placeholder="Correo Electrónico" type="email" name="email">
-                <div>
-                    <input  type="checkbox" name="check">
-                    <span>Aceptar los terminos y condiciones</span>
-                </div>
-                <div>
-                    <input class="botnreg type="password" name="password" placeholder="Contraseña">
-                    <input class="botnreg type="password" name="confirm-password" placeholder="Confirmar Contraseña">
-                </div>
-                <span class="" id="password-error"></span>
-                <button class="botnreg" type="submit">Registrarse</button>
+        <section class="vh-100" style="background-color: #636363;">
+            <div class="container py-5 h-100">
+                <div class="row d-flex justify-content-center align-items-center h-100">
+                    <div class="col col-xl-10">
+                        <div class="card" style="border-radius: 1rem;">
+                            <div class="row g-0">
+                                <div class="col-md-6 col-lg-5 d-none d-md-block">
+                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/img1.webp"
+                                        alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
+                                </div>
+                                <div class="col-md-6 col-lg-7 d-flex align-items-center">
+                                    <div class="card-body p-4 p-lg-5 text-black">
 
-            </form>
+                                        <form>
 
-            
-        </div>
-        <script src="assets/js/reg-js.js"></script>
+                                            <div class="d-flex align-items-center mb-3 pb-1">
+                                                <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
+                                                <span class="h1 fw-bold mb-0">Registrarse</span>
+                                            </div>
+
+                                            <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Crea tu cuenta</h5>
+
+                                            <div data-mdb-input-init class="form-outline mb-4">
+                                                <input type="email" id="form2Example17"
+                                                    class="form-control form-control-lg" />
+                                                <label class="form-label" for="form2Example17">Correo electrónico</label>
+                                            </div>
+
+                                            <div data-mdb-input-init class="form-outline mb-4">
+                                                <input type="password" id="form2Example27"
+                                                    class="form-control form-control-lg" />
+                                                <label class="form-label" for="form2Example27">Password</label>
+                                            </div>
+
+                                            <div class="pt-1 mb-4">
+                                                <button data-mdb-button-init data-mdb-ripple-init
+                                                    class="btn btn-dark btn-lg btn-block" type="button">Login</button>
+                                            </div>
+
+                                            <a class="small text-muted" href="#!">¿Contraseña olvidada?</a>
+                                            <p class="mb-5 pb-lg-2" style="color: #393f81;">¿Ya tienes una cuenta?<a
+                                                    href="#!" style="color: #393f81;">Inicia sesión aquí</a></p>
+                                            <a href="#!" class="small text-muted">Términos de uso</a>
+                                            <a href="#!" class="small text-muted">Política de privacidad</a>
+                                        </form>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
