--- a/MedFiles o AssistMedic/registro.html
+++ b/MedFiles o AssistMedic/registro.html
@@ -8,6 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
+    <style>
+        .container {
+            max-width: 500px;
+        }
+    </style>
 </head>
 
 <body>
@@ -56,66 +61,66 @@
         </nav>
     </nav>
     <main>
-        <section class="vh-100" style="background-color: #636363;">
-            <div class="container py-5 h-100">
-                <div class="row d-flex justify-content-center align-items-center h-100">
-                    <div class="col col-xl-10">
-                        <div class="card" style="border-radius: 1rem;">
-                            <div class="row g-0">
-                                <div class="col-md-6 col-lg-5 d-none d-md-block">
-                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/img1.webp"
-                                        alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
-                                </div>
-                                <div class="col-md-6 col-lg-7 d-flex align-items-center">
-                                    <div class="card-body p-4 p-lg-5 text-black">
-
-                                        <form>
-
-                                            <div class="d-flex align-items-center mb-3 pb-1">
-                                                <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
-                                                <span class="h1 fw-bold mb-0">Registrarse</span>
-                                            </div>
-
-                                            <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Crea tu cuenta</h5>
-
-                                            <div data-mdb-input-init class="form-outline mb-4">
-                                                <input type="email" id="form2Example17"
-                                                    class="form-control form-control-lg" />
-                                                <label class="form-label" for="form2Example17">Correo electrónico</label>
-                                            </div>
-
-                                            <div data-mdb-input-init class="form-outline mb-4">
-                                                <input type="password" id="form2Example27"
-                                                    class="form-control form-control-lg" />
-                                                <label class="form-label" for="form2Example27">Password</label>
-                                            </div>
-
-                                            <div class="pt-1 mb-4">
-                                                <button data-mdb-button-init data-mdb-ripple-init
-                                                    class="btn btn-dark btn-lg btn-block" type="button">Login</button>
-                                            </div>
-
-                                            <a class="small text-muted" href="#!">¿Contraseña olvidada?</a>
-                                            <p class="mb-5 pb-lg-2" style="color: #393f81;">¿Ya tienes una cuenta?<a
-                                                    href="#!" style="color: #393f81;">Inicia sesión aquí</a></p>
-                                            <a href="#!" class="small text-muted">Términos de uso</a>
-                                            <a href="#!" class="small text-muted">Política de privacidad</a>
-                                        </form>
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+    <div class="container"></div>
+        <form>
+            <!-- 2 column grid layout with text inputs for the first and last names -->
+            <div class="row mb-4">
+                <div class="col">
+                    <div data-mdb-input-init class="form-outline">
+                        <input type="text" id="form6Example1" class="form-control" />
+                        <label class="form-label" for="form6Example1">First name</label>
+                    </div>
+                </div>
+                <div class="col">
+                    <div data-mdb-input-init class="form-outline">
+                        <input type="text" id="form6Example2" class="form-control" />
+                        <label class="form-label" for="form6Example2">Last name</label>
                     </div>
                 </div>
             </div>
-        </section>
+
+            <!-- Text input -->
+            <div data-mdb-input-init class="form-outline mb-4">
+                <input type="text" id="form6Example3" class="form-control" />
+                <label class="form-label" for="form6Example3">Company name</label>
+            </div>
+
+            <!-- Text input -->
+            <div data-mdb-input-init class="form-outline mb-4">
+                <input type="text" id="form6Example4" class="form-control" />
+                <label class="form-label" for="form6Example4">Address</label>
+            </div>
+
+            <!-- Email input -->
+            <div data-mdb-input-init class="form-outline mb-4">
+                <input type="email" id="form6Example5" class="form-control" />
+                <label class="form-label" for="form6Example5">Email</label>
+            </div>
+
+            <!-- Number input -->
+            <div data-mdb-input-init class="form-outline mb-4">
+                <input type="number" id="form6Example6" class="form-control" />
+                <label class="form-label" for="form6Example6">Phone</label>
+            </div>
+
+            <!-- Message input -->
+            <div data-mdb-input-init class="form-outline mb-4">
+                <textarea class="form-control" id="form6Example7" rows="4"></textarea>
+                <label class="form-label" for="form6Example7">Additional information</label>
+            </div>
+
+            <!-- Checkbox -->
+            <div class="form-check d-flex justify-content-center mb-4">
+                <input class="form-check-input me-2" type="checkbox" value="" id="form6Example8" checked />
+                <label class="form-check-label" for="form6Example8"> Create an account? </label>
+            </div>
+
+            <!-- Submit button -->
+            <button data-mdb-ripple-init type="button" class="btn btn-primary btn-block mb-4">Place order</button>
+        </form>
     </main>
-
-    <footer>
-
-    </footer>
-
+    <footer></footer>
+    <script src="aaa.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
