Se agrego el aside

--- a/MedFiles o AssistMedic/index.html
+++ b/MedFiles o AssistMedic/index.html
@@ -42,7 +42,7 @@
             </div>
           </nav>    
     </nav>
-
+    <div class="contenedor">
     <main>
       <h1 style="color: white; font-weight: 1000;">¡Bienvenido a MedFiles!</h1>
       <section>
@@ -54,6 +54,11 @@
       <p style="font-size: 20px; font-weight: 1000;">PARA REALIZAR CUALQUIER OPERACION DENTRO DE LA PÁGINA, NECESITAMOS QUE TE REGISTRES O INICIES SESIÓN.</p>
       </section>
     </main>
+    
+    <aside>
+      parrafo
+    </aside>
+    </div>
 
     <footer>
       <!-- Footer -->
@@ -119,7 +124,7 @@
             <a href = "" class="text-reset">zenagsuma5@gmail.com</a>
           </p>
           <p>
-            <a href="https://a24films.com/films" target="_blank" class="text-reset">ramiroaanchez345@gmail.com</a>
+            <a href="" target="_blank" class="text-reset">ramiroaanchez345@gmail.com</a>
           </p>
           <p>
             <a href="https://a24films.com/television" target="_blank" class="text-reset">juanqi3489@gmail.com</a>
