--- a/MedFiles o AssistMedic/reg.html
+++ b/MedFiles o AssistMedic/reg.html
@@ -1,119 +1,213 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/styles/regstyle.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand" style="background-color: rgb(103, 161, 103);" data-bs-theme="dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">MedFiles</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
-                aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarColor01">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">INICIO
-                            <span class="visually-hidden">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">TURNOS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-                            aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Separated link</a>
-                        </div>
-                    </li>
-                </ul>
-                <form class="d-flex">
-                    <input class="form-control me-sm-2" type="search" placeholder="Search">
-                    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-                </form>
+    <nav>
+        <nav class="navbar navbar-expand-lg" style="background-color: rgb(98, 165, 107);" data-bs-theme="dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">MedFiles</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
+                    aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarColor01">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">INICIO
+                                <span class="visually-hidden">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">OPERACIONES</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">+ INFORMACIÓN</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">SOBRE NOSOTROS</a>
+                        </li>
+                    </ul>
+                    <div class="d-flex registro_usuario">
+                        <a class="nav-link registro" href="#">REGISTRARSE</a>
+                        <a class="nav-link iniciar_sesion" href="#">INICIAR SESIÓN</a>
+                    </div>
+                </div>
             </div>
-        </div>
+        </nav>
     </nav>
     <main>
-        <form>
-            <!-- 2 column grid layout with text inputs for the first and last names -->
-            <div class="row mb-4">
-                <div class="col">
-                    <div data-mdb-input-init class="form-outline">
-                        <input type="text" id="form3Example1" class="form-control" />
-                        <label class="form-label" for="form3Example1">First name</label>
+        <section class="h-100 bg-dark">
+            <div class="container py-5 h-100">
+                <div class="row d-flex justify-content-center align-items-center h-100">
+                    <div class="col">
+                        <div class="card card-registration my-4">
+                            <div class="row g-0">
+                                <div class="col-xl-6 d-none d-xl-block">
+                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/img4.webp"
+                                        alt="Sample photo" class="img-fluid"
+                                        style="border-top-left-radius: .25rem; border-bottom-left-radius: .25rem;" />
+                                </div>
+                                <div class="col-xl-6">
+                                    <div class="card-body p-md-5 text-black">
+                                        <h3 class="mb-5 text-uppercase">Registro</h3>
+
+                                        <div class="row">
+                                            <div class="col-md-6 mb-4">
+                                                <div data-mdb-input-init class="form-outline">
+                                                    <input type="text" id="form3Example1m"
+                                                        class="form-control form-control-lg" />
+                                                    <label class="form-label" for="form3Example1m">Nombres</label>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6 mb-4">
+                                                <div data-mdb-input-init class="form-outline">
+                                                    <input type="text" id="form3Example1n"
+                                                        class="form-control form-control-lg" />
+                                                    <label class="form-label" for="form3Example1n">Apellido/s</label>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="row">
+                                            <div class="col-md-6 mb-4">
+                                                <div data-mdb-input-init class="form-outline">
+                                                    <input type="text" id="form3Example1m1"
+                                                        class="form-control form-control-lg" />
+                                                    <label class="form-label" for="form3Example1m1">Ciudad</label>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6 mb-4">
+                                                <div data-mdb-input-init class="form-outline">
+                                                    <input type="text" id="form3Example1n1"
+                                                        class="form-control form-control-lg" />
+                                                    <label class="form-label" for="form3Example1n1">Localidad
+                                                    </label>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div data-mdb-input-init class="form-outline mb-4">
+                                            <input type="text" id="form3Example8"
+                                                class="form-control form-control-lg" />
+                                            <label class="form-label" for="form3Example8">Dirección</label>
+                                        </div>
+
+                                        <div class="d-md-flex justify-content-start align-items-center mb-4 py-2">
+
+                                            <h6 class="mb-0 me-4">Género: </h6>
+
+                                            <div class="form-check form-check-inline mb-0 me-4">
+                                                <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                                    id="femaleGender" value="option1" />
+                                                <label class="form-check-label" for="femaleGender">Mujer</label>
+                                            </div>
+
+                                            <div class="form-check form-check-inline mb-0 me-4">
+                                                <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                                    id="maleGender" value="option2" />
+                                                <label class="form-check-label" for="maleGender">Hombre</label>
+                                            </div>
+
+                                            <div class="form-check form-check-inline mb-0">
+                                                <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                                    id="otherGender" value="option3" />
+                                                <label class="form-check-label" for="otherGender">Otro</label>
+                                            </div>
+
+                                        </div>
+
+                                        <div class="row" style="display: flex; justify-content: center;">
+                                            <p style="text-align: center;">Fecha de Nacimiento</p>
+                                            <div class="col-md-6 mb-4" style="width: 30%;">
+
+                                                <select data-mdb-select-init>
+                                                    <option value="1">Día</option>
+                                                    <option value="2">1</option>
+                                                    <option value="3">2</option>
+                                                    <option value="4">3</option>
+                                                    <option value="4">4</option>
+                                                    <option value="4">5</option>
+                                                    <option value="4">6</option>
+                                                    <option value="4">7</option>
+                                                    <option value="4">8</option>
+                                                    <option value="4">9</option>
+                                                </select>
+
+                                            </div>
+                                            <div class="col-md-6 mb-4" style="width: 30%;">
+
+                                                <select data-mdb-select-init>
+                                                    <option value="1">Mes</option>
+                                                    <option value="2">1</option>
+                                                    <option value="3">2</option>
+                                                    <option value="4">3</option>
+                                                    <option value="5">4</option>
+                                                    <option value="6">5</option>
+                                                    <option value="7">6</option>
+                                                    <option value="8">7</option>
+                                                    <option value="9">8</option>
+                                                    <option value="10">9</option>
+                                                    <option value="11">10</option>
+                                                    <option value="12">11</option>
+                                                    <option value="13">12</option>
+                                                </select>
+
+                                            </div>
+                                            <div class="col-md-6 mb-4" style="width: 30%;">
+
+                                                <select data-mdb-select-init>
+                                                    <option value="1">Año</option>
+                                                    <option value="2">1960</option>
+                                                    <option value="3">1965</option>
+                                                    <option value="4">1970</option>
+                                                </select>
+
+                                            </div>
+                                        </div>
+
+                                        <div data-mdb-input-init class="form-outline mb-3">
+                                            <input placeholder="ejemplo@gmail.com" type="email" id="form3Example97"
+                                                class="form-control form-control-lg" />
+                                            <label class="form-label" for="form3Example97">Correo Electrónico</label>
+                                        </div>
+
+                                        <div data-mdb-input-init class="form-outline mb-4">
+                                            <input placeholder="Ingresar contraseña" type="password" id="form3Example90"
+                                                class="form-control form-control-lg" />
+                                            <label class="form-label" for="form3Example90">Contraseña</label>
+                                        </div>
+
+                                        <div data-mdb-input-init class="form-outline mb-4">
+                                            <input placeholder="Repetir contraseña" type="password" id="form3Example99"
+                                                class="form-control form-control-lg" />
+                                            <label class="form-label" for="form3Example90">Confirmar contraseña</label>
+                                        </div>
+
+                                        <div class="d-flex justify-content-end pt-3">
+                                            <button type="button" data-mdb-button-init data-mdb-ripple-init
+                                                class="btn btn-light btn-lg">Tengo una cuenta</button>
+                                            <button type="button" data-mdb-button-init data-mdb-ripple-init
+                                                class="btn btn-danger btn-lg ms-2">Registrarse</button>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div data-mdb-input-init class="form-outline">
-                        <input type="text" id="form3Example2" class="form-control" />
-                        <label class="form-label" for="form3Example2">Last name</label>
-                    </div>
-                </div>
             </div>
-
-            <!-- Email input -->
-            <div data-mdb-input-init class="form-outline mb-4">
-                <input type="email" id="form3Example3" class="form-control" />
-                <label class="form-label" for="form3Example3">Email address</label>
-            </div>
-
-            <!-- Password input -->
-            <div data-mdb-input-init class="form-outline mb-4">
-                <input type="password" id="form3Example4" class="form-control" />
-                <label class="form-label" for="form3Example4">Password</label>
-            </div>
-
-            <!-- Checkbox -->
-            <div class="form-check d-flex justify-content-center mb-4">
-                <input class="form-check-input me-2" type="checkbox" value="" id="form2Example33" checked />
-                <label class="form-check-label" for="form2Example33">
-                    Subscribe to our newsletter
-                </label>
-            </div>
-
-            <!-- Submit button -->
-            <button data-mdb-ripple-init type="button" class="btn btn-primary btn-block mb-4">Sign up</button>
-
-            <!-- Register buttons -->
-            <div class="text-center">
-                <p>or sign up with:</p>
-                <button data-mdb-ripple-init type="button" class="btn btn-secondary btn-floating mx-1">
-                    <i class="fab fa-facebook-f"></i>
-                </button>
-
-                <button data-mdb-ripple-init type="button" class="btn btn-secondary btn-floating mx-1">
-                    <i class="fab fa-google"></i>
-                </button>
-
-                <button data-mdb-ripple-init type="button" class="btn btn-secondary btn-floating mx-1">
-                    <i class="fab fa-twitter"></i>
-                </button>
-
-                <button data-mdb-ripple-init type="button" class="btn btn-secondary btn-floating mx-1">
-                    <i class="fab fa-github"></i>
-                </button>
-            </div>
-        </form>
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
