Creación de operaciones.html, se esta creando el menú para realizar operaciones

--- a/MedFiles o AssistMedic/operaciones.html
+++ b/MedFiles o AssistMedic/operaciones.html
@@ -20,12 +20,12 @@
               <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav me-auto">
                   <li class="nav-item">
-                    <a class="nav-link active" href="index.html">INICIO
+                    <a class="nav-link" href="index.html">INICIO
                       <span class="visually-hidden">(current)</span>
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="operaciones.html">OPERACIONES</a>
+                    <a class="nav-link active" href="operaciones.html">OPERACIONES</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">+ INFORMACIÓN</a>
@@ -43,17 +43,24 @@
           </nav>    
     </nav>
 
+    <div class="contenedor">
     <main>
-      <h1 style="color: white; font-weight: 1000;">¡Bienvenido a MedFiles!</h1>
-      <section>
-      <p style="font-size: 15px;">Te damos la bienvenida a nuestra página, a través de la cual vas a poder realizar el pedido de turnos, entre otras operaciones. <br>
-      Para pedir turnos y demás, puedes dirigirte al apartado "OPERACIONES". <br>
-      Si tienes un par de dudas, dirigete al apartado "+ INFORMACIÓN". <br>
-      Si quieres saber sobre nuestra historia, puedes ir al apartado "SOBRE NOSOTROS".</p>
-
-      <p style="font-size: 20px; font-weight: 1000;">PARA REALIZAR CUALQUIER OPERACION DENTRO DE LA PÁGINA, NECESITAMOS QUE TE REGISTRES O INICIES SESIÓN.</p>
-      </section>
+      
     </main>
+
+    <aside>
+        <h1 class= "border-bottom" style="color: white;">MENÚ</h1>
+        <div class="list-group">
+            <a href="turnos.html" class="list-group-item list-group-item-action active" style="background-color: rgb(41, 98, 50); color:white; border: none; font-weight: bold;" aria-current="true">
+              TURNOS
+            </a>
+            <a href="" class="list-group-item list-group-item-action" style="background-color: rgb(62, 136, 72); color:white; border-top: 2px solid white; border-bottom: 2px solid white; border-right: none; border-left: none;">MÉDICOS DISPONIBLES</a>
+            <a href="#" class="list-group-item list-group-item-action" style="background-color: rgb(62, 136, 72); color:white; border: none;>CALENDARIO</a>
+            <a href="#" class="list-group-item list-group-item-action">CALENDARIO</a>
+            <a class="list-group-item list-group-item-action disabled" aria-disabled="true">A disabled link item</a>
+          </div>
+    </aside>
+    </div>
     
 
     <footer>
