Se modifico el apartado de operaciones

--- a/MedFiles o AssistMedic/operaciones.html
+++ b/MedFiles o AssistMedic/operaciones.html
@@ -45,7 +45,22 @@
 
     <div class="contenedor">
     <main>
-      
+      <h1 style="color:white; font-weight: bold;">ESTE ES EL APARTADO DE OPERACIONES</h1>
+      <p>En este apartado lo que vas a poder hacer son tus operaciones correspondientes. Ya sea pedir turnos, consultar tus turnos o sino también consultar que médicos estan disponibles en el establecimiento.</p>
+      <p>En el MENÚ de la derecha, vas a contar con dos botones, uno para pedir turnos y otro para consultar médicos.</p>
+      <h2 style="color:white; font-weight: bold;">TURNOS</h2>
+      <p>Aprieta en ese botón si quieres: <br>
+        -Pedir turnos <br>
+        -Administrar turnos <br>
+      </p>
+      <h2 style="color:white; font-weight: bold;">MÉDICOS DISPONIBLES</h2>
+      <p>Aprieta en ese botón, si quieres: <br>
+        -Consultar que médicos hay <br>
+        -Consultar cuál es su especialización <br>
+        -Consultar si esta disponible o no <br>
+      </p> <br>
+
+      <p style="font-weight: bold; font-size: 18px;">DEBE TENER EN CUENTA QUE HAY MUCHA GENTE QUE QUIERE PEDIR TURNOS, ASÍ QUE DEBE TOMAR UN TURNO SIENDO CONSCIENTE DE QUE VA A ASISTIR, PARA AHORRAR EL TIEMPO DE LA GENTE</p>
     </main>
 
     <aside>
