Se agregaron botones al apartado de turno y se agrego información al apartado de médicos disponibles, al igual que se crearon botones para navegar entre paginas

--- a/MedFiles o AssistMedic/medicosDispoPag3.html
+++ b/MedFiles o AssistMedic/medicosDispoPag3.html
@@ -13,7 +13,7 @@
     <nav>
         <nav class="navbar navbar-expand-lg" style="background-color: rgb(98, 165, 107);" data-bs-theme="dark">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">MedFiles</a>
+              <a class="navbar-brand" href="index.html">MedFiles</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -44,8 +44,57 @@
     </nav>
 
     <div class="contenedor">
+
     <main>
-      
+      <h1>MÉDICOS DISPONIBLES EN EL ESTABLECIMIENTO</h1>
+      <section class="seccion">
+        <div>
+            <h3 class="titulo-seccion">Dr. Juan Carlos Méndez</h3>
+            <p class="contenido-seccion">Egresado de la Universidad Nacional de Cuyo (UNCuyo) y especializado en Traumatología en el Hospital Italiano de Buenos Aires.</p>
+            <footer class="pie-seccion">Traumatología</footer>
+        </div>
+    </section>
+    <section class="seccion">
+        <div>
+            <h3 class="titulo-seccion">Dra. Ana María Fernández</h3>
+            <p class="contenido-seccion">La Dra. Fernández es una reconocida cardióloga con más de 20 años de experiencia. Se graduó de la Universidad de Buenos Aires.</p>
+            <footer class="pie-seccion">Cardiología</footer>
+        </div>
+    </section>
+    <section class="seccion">
+        <div>
+            <h3 class="titulo-seccion">Dr. Pablo Martínez</h3>
+            <p class="contenido-seccion">El Dr. Martínez es un pediatra con 12 años de experiencia. Se graduó de la Universidad Nacional del Nordeste y completó su formación en el Hospital Garrahan en Buenos Aires.</p>
+            <footer class="pie-seccion">Pediatría</footer>
+        </div>
+    </section>
+
+    <div>
+      <ul class="pagination">
+        <li class="page-item ">
+          <a class="page-link" href="medicosDispoPag2.html">&laquo;</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="medicosDispoPag1.html">1</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="medicosDispoPag2.html">2</a>
+        </li>
+        <li class="page-item active">
+          <a class="page-link" href="medicosDispoPag3.html">3</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="medicosDispoPag4.html">4</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="medicosDispoPag5.html">5</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="medicosDispoPag4.html">&raquo;</a>
+        </li>
+      </ul>
+    </div>
+
     </main>
 
     <aside>
@@ -54,7 +103,7 @@
             <a href="turnos.html" class="list-group-item list-group-item-action active" style="background-color: rgb(62, 136, 72); color:white; border-top: none; border-bottom: 1px solid white; border-right: none; border-left: none;">
               TURNOS
             </a>
-            <a href="medicosDispo.html" class="list-group-item list-group-item-action" style="background-color: rgb(41, 98, 50); color:white; border: none; border-bottom: none; font-weight: bold;" aria-current="true">MÉDICOS DISPONIBLES</a>
+            <a href="medicosDispoPag1.html" class="list-group-item list-group-item-action" style="background-color: rgb(41, 98, 50); color:white; border: none; border-bottom: none; font-weight: bold;" aria-current="true">MÉDICOS DISPONIBLES</a>
           </div>
           <div class="retroceso">
             <a href="operaciones.html">
