--- a/MedFiles o AssistMedic/turnos.html
+++ b/MedFiles o AssistMedic/turnos.html
@@ -13,7 +13,7 @@
     <nav>
         <nav class="navbar navbar-expand-lg" style="background-color: rgb(98, 165, 107);" data-bs-theme="dark">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">MedFiles</a>
+              <a class="navbar-brand" href="index.html">MedFiles</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -44,8 +44,15 @@
     </nav>
 
     <div class="contenedor">
+
     <main>
-      
+      <h1>SELECCIONE LA OPERACIÓN A REALIZAR</h1>
+
+      <div class="botones">
+      <a href=""><button>PEDIR TURNO</button></a>
+      <a href=""><button>CONSULTAR TURNOS</button></a>
+      </div>
+
     </main>
 
     <aside>
@@ -54,7 +61,7 @@
             <a href="turnos.html" class="list-group-item list-group-item-action active" style="background-color: rgb(41, 98, 50); color:white; border: none; font-weight: bold;" aria-current="true">
               TURNOS
             </a>
-            <a href="medicosDispo.html" class="list-group-item list-group-item-action" style="background-color: rgb(62, 136, 72); color:white; border-top: 1px solid white; border-bottom: none; border-right: none; border-left: none;">MÉDICOS DISPONIBLES</a>
+            <a href="medicosDispoPag1.html" class="list-group-item list-group-item-action" style="background-color: rgb(62, 136, 72); color:white; border-top: 1px solid white; border-bottom: none; border-right: none; border-left: none;">MÉDICOS DISPONIBLES</a>
           </div>
           <div class="retroceso">
             <a href="operaciones.html">
