--- a/MedFiles o AssistMedic/medicosDispoPag2.html
+++ b/MedFiles o AssistMedic/medicosDispoPag2.html
@@ -6,7 +6,7 @@
     <title>MedFiles</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">  
     <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/styles/operaciones.css">
+    <link rel="stylesheet" href="assets/styles/medicosDispo.css">
 </head>
 
 <body>
@@ -44,32 +44,75 @@
     </nav>
 
     <div class="contenedor">
-    <main>
-      <h1 style="color:white; font-weight: bold;">ESTE ES EL APARTADO DE OPERACIONES</h1>
-      <p>En este apartado lo que vas a poder hacer son tus operaciones correspondientes. Ya sea pedir turnos, consultar tus turnos o sino también consultar que médicos estan disponibles en el establecimiento.</p>
-      <p>En el MENÚ de la derecha, vas a contar con dos botones, uno para pedir turnos y otro para consultar médicos.</p>
-      <h2 style="color:white; font-weight: bold;">TURNOS</h2>
-      <p>Aprieta en ese botón si quieres: <br>
-        -Pedir turnos <br>
-        -Administrar turnos <br>
-      </p>
-      <h2 style="color:white; font-weight: bold;">MÉDICOS DISPONIBLES</h2>
-      <p>Aprieta en ese botón, si quieres: <br>
-        -Consultar que médicos hay <br>
-        -Consultar cuál es su especialización <br>
-        -Consultar si esta disponible o no <br>
-      </p> <br>
 
-      <p style="font-weight: bold; font-size: 18px;">DEBE TENER EN CUENTA QUE HAY MUCHA GENTE QUE QUIERE PEDIR TURNOS, ASÍ QUE DEBE TOMAR UN TURNO SIENDO CONSCIENTE DE QUE VA A ASISTIR, PARA AHORRAR EL TIEMPO DE LA GENTE.</p>
+    <main>
+      <h1>MÉDICOS DISPONIBLES EN EL ESTABLECIMIENTO</h1>
+      <section class="seccion">
+        <div>
+            <h3 class="titulo-seccion">Dr. Ricardo López</h3>
+            <p class="contenido-seccion"> Médico cirujano egresado de la Universidad Nacional de Tucumán (UNT). Realizó su residencia en Cirugía General en el Hospital de Clínicas "José de San Martín"</p>
+            <div class="escuchar-en">
+            <footer class="pie-seccion">Cirugía General</footer>
+        </div>
+        </div>
+    </section>
+    <section class="seccion">
+        <div>
+            <h3 class="titulo-seccion">Dra. Laura Fernández</h3>
+            <p class="contenido-seccion">Graduada de la Universidad Nacional de Rosario (UNR) con una especialización en Pediatría del Hospital Garrahan. Cuenta con más de 15 años de experiencia en atención pediátrica y ha trabajado en proyectos de salud infantil en zonas rurales de Formosa.</p>
+            <footer class="pie-seccion">Pediatría</footer>
+        </div>
+    </section>
+    <section class="seccion">
+        <div>
+            <h3 class="titulo-seccion">Dra. Silvia Pérez</h3>
+            <p class="contenido-seccion">Graduada de la Universidad Nacional de La Plata (UNLP) con especialización en Ginecología y Obstetricia del Hospital Posadas.</p>
+            <footer class="pie-seccion">Ginecología y Obstetricia</footer>
+        </div>
+    </section>
+
+    <div>
+      <ul class="pagination">
+        <li class="page-item ">
+          <a class="page-link" href="medicosDispoPag1.html">&laquo;</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="medicosDispoPag1.html">1</a>
+        </li>
+        <li class="page-item active">
+          <a class="page-link" href="medicosDispoPag2.html">2</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="medicosDispoPag3.html">3</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="medicosDispoPag4.html">4</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="medicosDispoPag5.html">5</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="medicosDispoPag3.html">&raquo;</a>
+        </li>
+      </ul>
+    </div>
+
     </main>
 
     <aside>
         <h1 class= "border-bottom" style="color: white;">MENÚ</h1>
         <div class="list-group">
-            <a href="turnos.html" class="list-group-item list-group-item-action active" style="background-color: rgb(62, 136, 72); color:white; border: none;">
+            <a href="turnos.html" class="list-group-item list-group-item-action active" style="background-color: rgb(62, 136, 72); color:white; border-top: none; border-bottom: 1px solid white; border-right: none; border-left: none;">
               TURNOS
             </a>
-            <a href="medicosDispoPag1.html" class="list-group-item list-group-item-action" style="background-color: rgb(62, 136, 72); color:white; border-top: 1px solid white; border-bottom: none; border-right: none; border-left: none;">MÉDICOS DISPONIBLES</a>
+            <a href="medicosDispoPag1.html" class="list-group-item list-group-item-action" style="background-color: rgb(41, 98, 50); color:white; border: none; border-bottom: none; font-weight: bold;" aria-current="true">MÉDICOS DISPONIBLES</a>
+          </div>
+          <div class="retroceso">
+            <a href="operaciones.html">
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" class="bi bi-arrow-left-circle" viewBox="0 0 16 16">
+                <path class="svg-path" fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-4.5-.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5z"/>
+              </svg>
+            </a>
           </div>
     </aside>
     </div>
