Se añadio información al apartado de +INFORMACIÓN y SOBRE NOSOTROS y se termino el footer

--- a/front-end/masInformacion.html
+++ b/front-end/masInformacion.html
@@ -6,7 +6,7 @@
     <title>MedFiles</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">  
     <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/styles/medicosDispo.css">
+    <link rel="stylesheet" href="assets/styles/masInformacion.css">
 </head>
 
 <body>
@@ -25,10 +25,10 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="operaciones.html">OPERACIONES</a>
+                    <a class="nav-link" href="operaciones.html">OPERACIONES</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="masInformacion.html">+ INFORMACIÓN</a>
+                    <a class="nav-link active" href="masInformacion.html">+ INFORMACIÓN</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="sobreNosotros.html">SOBRE NOSOTROS</a>
@@ -43,77 +43,47 @@
           </nav>    
     </nav>
 
-    <div class="contenedor">
-
     <main>
-      <h1>MÉDICOS DISPONIBLES EN EL ESTABLECIMIENTO</h1>
-      <section class="seccion">
-        <div>
-            <h3 class="titulo-seccion">Dr. Gustavo Alvarado</h3>
-            <p class="contenido-seccion">Egresado de la Universidad Nacional del Nordeste (UNNE) y especializado en Psiquiatría en el Hospital Borda.</p>
-            <footer class="pie-seccion">Psiquiatría</footer>
-        </div>
-    </section>
-    <section class="seccion">
-        <div>
-            <h3 class="titulo-seccion">Dra. Mariana Duarte</h3>
-            <p class="contenido-seccion">Graduada de la Universidad Nacional de La Plata (UNLP) y especializada en Reumatología en el Hospital Italiano de Buenos Aires.</p>
-            <footer class="pie-seccion">Reumatología</footer>
-        </div>
-    </section>
-    <section class="seccion">
-        <div>
-            <h3 class="titulo-seccion">Dra. Ana Torres</h3>
-            <p class="contenido-seccion">Graduada de la Universidad Nacional de Rosario (UNR) y especializada en Hematología en el Hospital de Clínicas "José de San Martín".</p>
-            <footer class="pie-seccion">Hematología</footer>
-        </div>
-    </section>
-
-    <div>
-      <ul class="pagination">
-        <li class="page-item ">
-          <a class="page-link" href="medicosDispoPag3.html">&laquo;</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="medicosDispoPag1.html">1</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="medicosDispoPag2.html">2</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="medicosDispoPag3.html">3</a>
-        </li>
-        <li class="page-item active">
-          <a class="page-link" href="medicosDispoPag4.html">4</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="medicosDispoPag5.html">5</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="medicosDispoPag5.html">&raquo;</a>
-        </li>
-      </ul>
-    </div>
-
+      <h1 style="color: white; font-weight: 1000;">PREGUNTAS FRECUENTES</h1>
+      <section>
+        <section class="seccion">
+          <div>
+              <h5 class="titulo-seccion">¿Cómo puedo crear una cuenta?</h5>
+              <p class="contenido-seccion">Para crear tu cuenta, simplemente tienes que dirigirte al boton de la esquina superior derecha que dice "REGISTRARSE". Acá se le van a pedir una serie de datos personales, ya sea DNI, edad, etc. Pedimos encarecidamente que sea sincero con los datos que coloque.</p>
+          </div>
+        </section>
+        <section class="seccion">
+          <div>
+              <h5 class="titulo-seccion">¿Cómo puedo iniciar sesión?</h5>
+              <p class="contenido-seccion">Para iniciar sesión, tienes que ir a la esquina superior derecha y apretar el boton que dice "INICIAR SESIÓN". Acá se le va a pedir su correo electrónico y su contraseña.</p>
+          </div>
+        </section>
+        <section class="seccion">
+          <div>
+              <h5 class="titulo-seccion">¿Cómo solicito un turno?</h5>
+              <p class="contenido-seccion">Para realizar esto, tienes que ubicarte en el menú superior y apretar en el boton "OPERACIONES" (Ten en cuenta que solamente puedes pedir turnos si tienes una cuenta). Se te va a presentar una página con un apartado principal y la derecha un menú con dos opciones. Debes apretar en el boton "TURNOS" y a continuación se te van a presentar dos botones. Uno para "PEDIR TURNOS" y otro para "CONSULTAR TURNOS". A la hora de pedir turnos, se te va a presentar</p>
+          </div>
+        </section>
+        <section class="seccion">
+          <div>
+              <h5 class="titulo-seccion">¿Cómo puedo ver la lista de médicos disponibles?</h5>
+              <p class="contenido-seccion">Para consultar esto, simplemente tienes que dirigirte al boton de "OPERACIONES" mencionado anteriormente, donde a continuación se te va a presentar un menú con dos botones, uno para "TURNOS" y otro para "MÉDICOS DISPONIBLES", si aprieta en el último mencionado, va a poder consultar la lista de todos los médicos disponibles en el establecimiento y de los cuales (algunos) va a poder pedir turnos.</p>
+          </div>
+        </section>
+        <section class="seccion">
+          <div>
+              <h5 class="titulo-seccion">¿Con quién puedo contactar si tengo problemas técnicos?</h5>
+              <p class="contenido-seccion">Si tiene algún problema o alguna inquietud sobre la página, puede contactar a cualquiera de los tres desarrolladores, cuyos correos electrónicos se encuentran abajo del todo.</p>
+          </div>
+        </section>
+        <section class="seccion">
+          <div>
+              <h5 class="titulo-seccion">¿Cualés son los horarios de atención en el hospital?</h5>
+              <p class="contenido-seccion">El Hospital Alta Complejidad, se encuentra abierto desde 06:00am hasta las 21:00pm.</p>
+          </div>
+        </section>
+      </section>
     </main>
-
-    <aside>
-        <h1 class= "border-bottom" style="color: white;">MENÚ</h1>
-        <div class="list-group">
-            <a href="turnos.html" class="list-group-item list-group-item-action active" style="background-color: rgb(62, 136, 72); color:white; border-top: none; border-bottom: 1px solid white; border-right: none; border-left: none;">
-              TURNOS
-            </a>
-            <a href="medicosDispoPag1.html" class="list-group-item list-group-item-action" style="background-color: rgb(41, 98, 50); color:white; border: none; border-bottom: none; font-weight: bold;" aria-current="true">MÉDICOS DISPONIBLES</a>
-          </div>
-          <div class="retroceso">
-            <a href="operaciones.html">
-            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" class="bi bi-arrow-left-circle" viewBox="0 0 16 16">
-                <path class="svg-path" fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-4.5-.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5z"/>
-              </svg>
-            </a>
-          </div>
-    </aside>
-    </div>
     
 
     <footer>
@@ -206,7 +176,7 @@
           </div>
         </section>
           </footer>
-
+          
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
